--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.16.4",
@@ -57,6 +58,7 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
