added link to tests

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
+    "heroku": "^7.39.2",
     "history": "^4.10.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
